--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>To-Do List</title>
+  <title>Enhanced To-Do List</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
         <option value="Medium" selected>Medium</option>
         <option value="Low">Low</option>
       </select>
-      <button type="submit">Add Task</button>
+      <button type="submit">Add</button>
     </form>
     <ul id="task-list"></ul>
   </div>
