--- a/index.html
+++ b/index.html
@@ -5,21 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Enhanced To-Do List</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 <body>
   <div class="container">
-    <h1>To-Do List</h1>
-    <form id="task-form">
-      <input type="text" id="task-input" placeholder="Add a new task..." required>
-      <select id="priority-select">
-        <option value="High">High</option>
-        <option value="Medium" selected>Medium</option>
-        <option value="Low">Low</option>
-      </select>
-      <button type="submit">Add</button>
+    <h1 class="center-align">To-Do List</h1>
+    <form id="task-form" class="row">
+      <div class="input-field col s8">
+        <input type="text" id="task-input" placeholder="Add a new task..." required>
+      </div>
+      <div class="input-field col s2">
+        <select id="priority-select" class="browser-default">
+          <option value="High">High</option>
+          <option value="Medium" selected>Medium</option>
+          <option value="Low">Low</option>
+        </select>
+      </div>
+      <div class="input-field col s2">
+        <button type="submit" class="btn waves-effect waves-light">Add</button>
+      </div>
     </form>
-    <ul id="task-list"></ul>
+    <ul id="task-list" class="collection"></ul>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
